monitor process first commit - producer uses uniform distribution for time interval between 2   consecutive messages

--- a/src/monitor/test/analyse-consumer/docker-compose.yml
+++ b/src/monitor/test/analyse-consumer/docker-compose.yml
@@ -1,13 +1,16 @@
 version: '3.8'
 
 services: 
-
-  monitor: 
-    container_name: monitor
+  consumer: 
+    container_name: consumer
     build: .
     networks: 
       - kafka_kafka-network
+    volumes:
+      - ../data:/usr/src/data
+      
 
 networks:
   kafka_kafka-network: 
     external: true
+
