Revert "Merge branch 'consumer_capacity'"
This reverts commit 936da14107eae0fbbbb8591809871981ed3b35d6, reversing
changes made to 7a84bcdad46d32175e5126b9f5b74d579bfe52e1.

--- a/src/cluster/generic/Dockerfile
+++ b/src/cluster/generic/Dockerfile
@@ -1,21 +1,19 @@
 FROM python:3.7
 
 WORKDIR /usr/src/app
-COPY . .
 
 COPY ./requirements.txt ./
 RUN pip install -r requirements.txt
 
+COPY . .
 
-ENV BQ_TABLE='delivery_events'
-ENV IMPORT_PATH='contracts.delivery.delivery_events_v6'
-ENV IMPORT_OBJECT='DeliveryEventsV6Topic'
-ENV IGNORE_EVENTS='"[\"ShippingPricesEstimatedEvent\"]"'
-ENV CONSUME_ENV='prod'
-ENV WRITE_ENV='uat'
-ENV GROUP_ID='testing_capacity121'
-
-RUN mkdir -p /usr/src/data
+# ENV BQ_TABLE='delivery_events_temp'
+# ENV IMPORT_PATH='contracts.delivery.delivery_events_v6'
+# ENV IMPORT_OBJECT='DeliveryEventsV6Topic'
+# ENV IGNORE_EVENTS='"[\"ShippingPricesEstimatedEvent\"]"'
+# ENV CONSUME_ENV='prod'
+# ENV WRITE_ENV='uat'
+# ENV GROUP_ID='test_generic_delivery10'
 
 
-ENTRYPOINT ["/bin/sh", "-c", "python3 -u generic_consumer.py > /usr/src/data/output"]
+CMD python3 -u generic_consumer.py
