First version of consumer.
This consumer cannot go into production until the following changes are
made:
- Committing message offsets to Kafka;
- Assign metadata partition from deployment name;
- Publish event into controller partition in data-engineering-controller
  topic;
- Store the current state of the consumer in a volume;
- Catch termination signal;

--- a/src/consumer/Dockerfile
+++ b/src/consumer/Dockerfile
@@ -6,17 +6,13 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-ENV BQ_TABLE='delivery_events'
-ENV IMPORT_PATH='contracts.delivery.delivery_events_v6'
-ENV IMPORT_OBJECT='DeliveryEventsV6Topic'
-ENV IGNORE_EVENTS='"[\"ShippingPricesEstimatedEvent\"]"'
 ENV CONSUME_ENV='prod'
 ENV WRITE_ENV='uat'
-ENV GROUP_ID='testing_consumer_3'
+ENV GROUP_ID='consumer_capacity_1'
 ENV BATCH_BYTES='5000000'
 ENV WAIT_TIME_SECS='1' 
 
 RUN mkdir -p /usr/src/data
 
 
-ENTRYPOINT ["/bin/sh", "-c", "python3 -u generic_consumer.py"]
+ENTRYPOINT ["python3", "-u", "generic_consumer.py"]
