pod is aware of its name

--- a/src/consumer/Dockerfile
+++ b/src/consumer/Dockerfile
@@ -13,6 +13,10 @@ ENV BATCH_BYTES='5000000'
 ENV WAIT_TIME_SECS='1' 
 
 RUN mkdir -p /usr/src/data
+RUN mkdir -p /etc/podinfo
 
+RUN touch /etc/podinfo/pod_name
+
+VOLUME ["/etc/podinfo", "/usr/src/data"]
 
 ENTRYPOINT ["python3", "-u", "generic_consumer.py"]
