removed consumers_create consumers_remove sets from GroupManagment

--- a/src/controller/template-deployment.yml
+++ b/src/controller/template-deployment.yml
@@ -7,6 +7,8 @@ metadata:
     consumerGroup: de-consumer-group
 spec:
   replicas: 1
+  strategy: 
+    type: Recreate
   selector:
     matchLabels:
       app: de-consumer
