Changed Kafka connection in Consumers, added symlinks in controller templates, added logic in controller run.sh

--- a/src/cluster/generic/Dockerfile
+++ b/src/cluster/generic/Dockerfile
@@ -8,12 +8,12 @@ RUN pip install -r requirements.txt
 COPY . .
 
 ENV BQ_TABLE='delivery_events_temp'
-ENV IMPORT_PATH='contracts.delivery.delivery_events_v6'
-ENV IMPORT_OBJECT='DeliveryEventsV6Topic'
+ENV IMPORT_PATH='contracts.delivery.delivery_events_v10'
+ENV IMPORT_OBJECT='DeliveryEventsV10Topic'
 ENV IGNORE_EVENTS='"[\"ShippingPricesEstimatedEvent\"]"'
 ENV CONSUME_ENV='prod'
 ENV WRITE_ENV='uat'
-ENV GROUP_ID='test_generic_delivery10'
+ENV GROUP_ID='BT-test-duplicates'
 
 
 CMD python3 -u generic_consumer.py
