--- a/src/consumer/kubernetes-deployment/template-deployment.yml
+++ b/src/consumer/kubernetes-deployment/template-deployment.yml
@@ -7,6 +7,8 @@ metadata:
     consumerGroup: de-consumer-group
 spec:
   replicas: 1
+  strategy: 
+    type: Recreate
   selector:
     matchLabels:
       app: de-consumer
@@ -16,23 +18,23 @@ spec:
         app: de-consumer
     spec:
       hostAliases: 
-        - ip: "52.213.38.208"
+        - ip: "172.31.7.133"
           hostnames: 
             - "ip-172-31-7-133.eu-west-1.compute.internal"
-        - ip: "18.202.250.11"
+            - "uat"
+        - ip: "172.31.32.34"
           hostnames: 
             - "ip-172-31-32-34.eu-west-1.compute.internal"
-        - ip: "54.171.156.36"
-          hostnames: 
-            - "ip-172-31-8-59.eu-west-1.compute.internal"
-        - ip: "54.76.46.203"
+            - "prod1"
+        - ip: "172.31.30.37"
           hostnames: 
             - "ip-172-31-30-37.eu-west-1.compute.internal"
+            - "prod2"
       imagePullSecrets:
       - name: landauhubkey
       containers:
         - name: consumer-capacity
-          image: thehuub/consumer-capacity:v1.2.4
+          image: thehuub/consumer-capacity:v1.2.6
           imagePullPolicy: Always
           resources:
             requests: 
@@ -64,7 +66,6 @@ spec:
               - path: "pod_name"
                 fieldRef:
                   fieldPath: metadata.name
-
         - name: podpvc
           persistentVolumeClaim:
             claimName: de-consumer-1-volume
