--- a/src/controller/template-deployment.yml
+++ b/src/controller/template-deployment.yml
@@ -1,72 +1,1 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: de-consumer-1
-  namespace: data-engineering-dev
-  labels: 
-    consumerGroup: de-consumer-group
-spec:
-  replicas: 1
-  strategy: 
-    type: Recreate
-  selector:
-    matchLabels:
-      app: de-consumer
-  template:
-    metadata:
-      labels:
-        app: de-consumer
-    spec:
-      hostAliases: 
-        - ip: "52.213.38.208"
-          hostnames: 
-            - "ip-172-31-7-133.eu-west-1.compute.internal"
-        - ip: "18.202.250.11"
-          hostnames: 
-            - "ip-172-31-32-34.eu-west-1.compute.internal"
-        - ip: "54.171.156.36"
-          hostnames: 
-            - "ip-172-31-8-59.eu-west-1.compute.internal"
-        - ip: "54.76.46.203"
-          hostnames: 
-            - "ip-172-31-30-37.eu-west-1.compute.internal"
-      imagePullSecrets:
-      - name: landauhubkey
-      containers:
-        - name: consumer-capacity
-          image: thehuub/consumer-capacity:v1.2.5
-          imagePullPolicy: Always
-          resources:
-            requests: 
-              memory: "0.4Gi"
-              cpu: "500m"
-            limits: 
-              memory: "0.6Gi"
-              cpu: "500m"
-          env: 
-            - name: CONSUME_ENV
-              value: "prod"
-            - name: WRITE_ENV
-              value: "uat"
-            - name: GROUP_ID
-              value: "consumer_capacity_1"
-            - name: BATCH_BYTES
-              value: "5000000"
-            - name: WAIT_TIME_SECS
-              value: "1"
-          volumeMounts:
-            - name: podinfo
-              mountPath: /etc/podinfo
-            - name: podpvc
-              mountPath: /usr/src/data
-      volumes:
-        - name: podinfo
-          downwardAPI:
-            items:
-              - path: "pod_name"
-                fieldRef:
-                  fieldPath: metadata.name
-        - name: podpvc
-          persistentVolumeClaim:
-            claimName: de-consumer-1-volume
-
+/home/landaudiogo/Repos/huub_landau/src/consumer/kubernetes-deployment/template-deployment.yml
