Consumer modified for autoscaler test

--- a/src/consumer/Dockerfile
+++ b/src/consumer/Dockerfile
@@ -6,7 +6,7 @@ RUN pip install -r requirements.txt
 
 COPY . .
 
-ENV CONSUME_ENV='prod'
+ENV CONSUME_ENV='uat'
 ENV WRITE_ENV='uat'
 ENV GROUP_ID='data-engineering-autoscaler'
 ENV BATCH_BYTES='5000000'
