--- a/src/consumer/kubernetes-deployment/template-deployment.yml
+++ b/src/consumer/kubernetes-deployment/template-deployment.yml
@@ -4,6 +4,7 @@ metadata:
   name: de-consumer-1
   namespace: data-engineering-dev
   labels: 
+    consumerType: consumer-autoscaler
     consumerGroup: de-consumer-group
 spec:
   replicas: 1
@@ -34,7 +35,7 @@ spec:
       - name: landauhubkey
       containers:
         - name: consumer-capacity
-          image: thehuub/consumer-capacity:v1.2.6
+          image: thehuub/consumer-capacity:autoscaler_test_v0.1
           imagePullPolicy: Always
           resources:
             requests: 
@@ -45,7 +46,7 @@ spec:
               cpu: "500m"
           env: 
             - name: CONSUME_ENV
-              value: "prod"
+              value: "uat"
             - name: WRITE_ENV
               value: "uat"
             - name: GROUP_ID
